# tiles

./: .eslintrc.json  .gitignore  .pkg  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml  linux.yml  super-linter.yml  unix.yml  windows.yml
client/: compare.html  index.html  legacy.html  mapbox-gl.css  mapbox-gl.js  style-background.js  style-default.js
cmake/: buildcache.cmake  clang-tidy.cmake  pkg.cmake
include/tiles/: get_tile.h  parse_tile_url.h  util.h  util_parallel.h
include/tiles/db/: clear_database.h  feature_inserter.h  feature_pack.h  pack_file.h  quad_tree.h  repack_features.h  shared_metadata.h  shared_strings.h  tile_database.h  tile_index.h
include/tiles/feature/: deserialize.h  feature.h
include/tiles/mvt/: tile_builder.h  tile_spec.h
include/tiles/osm/: hybrid_node_idx.h  load_coastlines.h  load_osm.h  pending_feature.h  tmp_file.h
profile/: full.lua  profile.lua
src/: benchmark.cc  import.cc  perf_counter.cc  server.cc  util.cc
src/db/: bq_tree.cc  database_stats.cc  feature_pack.cc  feature_pack_quadtree.cc  prepare_tiles.cc
src/feature/: aggregate_line_features.cc  aggregate_polygon_features.cc
src/fixed/algo/: clip.cc
src/fixed/io/: deserialize.cc  dump.cc  serialize.cc  to_svg.cc
src/mvt/: tile_builder.cc
src/osm/: feature_handler.cc  hybrid_node_idx.cc  load_coastlines.cc  load_osm.cc  load_shapefile.cc  read_osm_geometry.cc
test/: aggregate_line_features_test.cc  bq_tree_test.cc  clip_test.cc  clipper_test.cc  compress_deflate.cc  feature_pack_fuzz.cc  feature_pack_test.cc  fixed_geometry_test.cc  hybrid_node_idx_test.cc  layer_names_test.cc  pack_file_test.cc  quad_tree_test.cc  repack_features_fuzz.cc  repack_features_test.cc  shared_strings_test.cc  strange_geometry_test.cc  test_pack_handle.h  tile_index_test.cc
